--- a/server/.eslintrc.json
+++ b/server/.eslintrc.json
@@ -66,6 +66,10 @@
     "strict": [
       2,
       "never"
+    ],
+    "no-console": ["warn", {
+        "allow": ["warn", "error"]
+      }
     ]
   }
 }
