--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "babel-node": "babel-node",
-    "start": "nodemon --exec babel-node ./src/index.js",
-    "test": "jest",
-    "build": "babel src -d dist"
+    "start": "node ./server.js",
+    "start-dev": "nodemon ./server.js",
+    "test": "jest"
   },
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -46,10 +45,6 @@
     "yup": "^0.26.6"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.0",
     "eslint": "^5.3.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
