--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,18 +1,31 @@
-FROM node:10.15.0-alpine
+FROM node:10.15.0-alpine as build-stage
 
-ARG NODE_ENV="development"
+ARG NODE_ENV="production"
 
-RUN mkdir -p ./client
+RUN mkdir ./client
 
-WORKDIR /client
+WORKDIR ./client
 
 COPY package*.json ./
 
+RUN npm install
+
 COPY . .
 
+RUN npm run build
 
+FROM nginx:1.13.12-alpine as production-stage
 
-EXPOSE 5000
+RUN mkdir -p /var/www/html/
 
-RUN npm install
-CMD npm start
+COPY --from=build-stage /client/build /var/www/html/
+
+COPY ./nginx.conf /etc/nginx/nginx.conf
+
+COPY ./nginx.vh.default.conf /etc/nginx/nginx.vh.default.conf
+
+STOPSIGNAL SIGTERM
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
