--- a/docker-compose-dev.yaml
+++ b/docker-compose-dev.yaml
@@ -1,12 +1,14 @@
-version: '2'
+version: '3.8'
 services:
 
-  front-react:
+  client-dev:
     build:
       context: ./client
-
+      dockerfile: Dockerfile-dev
     environment:
       NODE_ENV: development
+    stdin_open: true
+    tty: true    
     depends_on:
       - server-dev
     volumes:
@@ -18,21 +20,21 @@ services:
   server-dev:
     build:
       context: ./server
-
+      dockerfile: Dockerfile-dev
     environment:
       NODE_ENV: development
     ports:
       - "3000:3000"
     depends_on:
-      - db-dev
-      - mongo-dev
+      - postgres-db-dev
+      - mongo-db-dev
     volumes:
       - ./var/www/html/images:/var/www/html/images
       - ./server:/server
       - /server/node_modules
 
 
-  mongo-dev:
+  mongo-db-dev:
     image: mongo:3.6
     #     environment:
     #      - MONGO_INITDB_ROOT_USERNAME=mongo
@@ -42,14 +44,14 @@ services:
 
 
 
-  db-dev:
-    image: postgres:10
+  postgres-db-dev:
+    image: postgres:13
     environment:
-      - POSTGRES_PASSWORD=password
+      - POSTGRES_PASSWORD=admin
       - POSTGRES_USER=postgres
-      - POSTGRES_DB=todo-dev
+      - POSTGRES_DB=squadhelp-dev
     ports:
       - "5432:5432"
 
-volumes:
-  server-dev:
+# volumes:
+#   server-dev:
