--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,30 +1,33 @@
-version: '2'
+version: '3.8'
 services:
 
   client-prod:
     build:
       context: ./client
-      dockerfile: Dockerfile-production
     ports:
       - "80:80"
     depends_on:
       - server-prod
     volumes_from:
       - server-prod:ro
+    networks: 
+      - proxy-net
 
   server-prod:
     build:
       context: ./server
-      dockerfile: Dockerfile-production
     environment:
       NODE_ENV: production
-    ports:
-      - "3000:3000"
+    # ports:
+    #   - "3000:3000"
     depends_on:
       - db-prod
       - mongo-prod
     volumes:
       - /var/www/html/images:/var/www/html/images
+    networks: 
+      - backend-net  
+      - proxy-net
 
   db-prod:
     image: postgres:10
@@ -32,8 +35,10 @@ services:
       - POSTGRES_PASSWORD=password
       - POSTGRES_USER=postgres
       - POSTGRES_DB=todo-prod
-    ports:
-      - "5432:5432"
+    # ports:
+    #   - "5432:5432"
+    networks: 
+      - backend-net
 
   mongo-prod:
     image: mongo:latest
@@ -42,10 +47,16 @@ services:
       - MONGO_LOG_DIR=/dev/null
     volumes:
       - ./data/db:/data/db
-    ports:
-      - "27017:27017"
+    # ports:
+    #   - "27017:27017"
     command: mongod --smallfiles --logpath=/dev/null
-
+    networks: 
+      - backend-net
+    
+networks:
+  proxy-net:
+  backend-net:
+    
 volumes:
   server-prod:
   nginx-server-prod:
