--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,16 +1,16 @@
-FROM node:10.13.0
+FROM node:10.15.0
 
-ARG NODE_ENV="development"
+ARG NODE_ENV="production"
 
-RUN mkdir /server
+RUN mkdir ./server
 
-RUN mkdir -p /var/www/html/images
+RUN mkdir -p /var/www/html/images/
+
 
 WORKDIR /server
 
 COPY package*.json ./
 
-RUN npm install -g nodemon
 RUN npm install -g sequelize-cli
 
 RUN npm install
@@ -19,4 +19,6 @@ COPY . .
 
 EXPOSE 3000
 
-CMD npm start
+RUN npm run build
+
+CMD node ./dist/index.js
