--- a/server/config/mongoConfig.json
+++ b/server/config/mongoConfig.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "database": "shm-chat",
-    "host": "localhost",
+    "host": "mongo-db-dev",
     "port": 27017
   },
   "production": {
