--- a/server/config/postgresConfig.json
+++ b/server/config/postgresConfig.json
@@ -3,7 +3,7 @@
     "username": "postgres",
     "password": "admin",
     "database": "squadhelp-dev",
-    "host": "localhost",
+    "host": "postgres-db-dev",
     "dialect": "postgres",
     "operatorsAliases": "Op"
   },
